--- a/style.css
+++ b/style.css
@@ -64,10 +64,12 @@ th {
     padding: 9px;
     text-transform: uppercase;
 }
+
 a {
     text-decoration: none;
     color: #000;
 }
+
 .container {
     margin: 0 auto;
     max-width: 600px;
@@ -78,6 +80,7 @@ a {
     font-family: Lastochka;
     font-weight: normal;
     font-size: 75px;
+    margin-bottom: 30px;
 }
 
 .header {
@@ -93,6 +96,28 @@ a {
 .header_txt {
     font-size: 20px;
     font-weight: 500;
+}
+
+.logo-date {
+    margin-bottom: 30px;
+}
+
+.calendar {
+    position: relative;
+
+}
+
+.img1_calendar {
+    position: absolute;
+    width: 61px;
+    left: 210px;
+    top: 154px;
+    transform: rotate(300deg)
+}
+
+.img2_calendar {
+    background-color: none;
+    width: 450px;
 }
 
 .logo {}
@@ -111,17 +136,6 @@ a {
     max-width: 490px;
 }
 
-.calendar {
-    position: relative;
-    margin: 0 auto;
-}
-
-#calendar {
-    text-align: center;
-    position: relative;
-    margin: 0 auto;
-}
-
 .circle_spin-ring {
     max-width: 82px;
     max-height: 82px;
@@ -132,10 +146,19 @@ a {
     -webkit-animation: 10s linear 0s normal none infinite running rot;
     width: 100px;
 }
+
 .data {
-    border-radius: 20px;
+    /* border-radius: 20px;
     border: 3px solid black;
+    background-image: url(/images/ring.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center; */
 }
+
 .place {
     text-align: center;
 }
@@ -267,6 +290,7 @@ a {
     width: 38px;
     height: 100px;
 }
+
 .arrow-7 span {
     display: block;
     width: 30px;
@@ -277,22 +301,27 @@ a {
     margin: -16px 0;
     animation: arrow-7 2s infinite;
 }
-.arrow-7 span:nth-child(2){
+
+.arrow-7 span:nth-child(2) {
     animation-delay: -0.2s;
 }
-.arrow-7 span:nth-child(3){
+
+.arrow-7 span:nth-child(3) {
     animation-delay: -0.4s;
 }
+
 @keyframes arrow-7 {
-    0%{
+    0% {
         opacity: 0;
-        transform: translate(0,-20px) rotate(45deg);
+        transform: translate(0, -20px) rotate(45deg);
     }
-    50%{
+
+    50% {
         opacity: 1;
     }
-    100%{
+
+    100% {
         opacity: 0;
-        transform: translate(0,20px) rotate(45deg);
+        transform: translate(0, 20px) rotate(45deg);
     }
 }
