--- a/style.css
+++ b/style.css
@@ -34,11 +34,12 @@
 html {
     box-sizing: border-box;
     scroll-behavior: smooth;
+
 }
 
 body {
     margin: 0;
-    background-color: #f0f0eb;
+    background-image: url(/images/background.jpg);
 }
 
 li {
@@ -65,6 +66,10 @@ th {
     text-transform: uppercase;
 }
 
+td {
+    font-size: 25px;
+}
+
 a {
     text-decoration: none;
     color: #000;
@@ -74,6 +79,7 @@ a {
     margin: 0 auto;
     max-width: 600px;
     align-items: center;
+    /* background-color: #f0f0eb; */
 }
 
 .lastochka-font {
@@ -110,8 +116,8 @@ a {
 .img1_calendar {
     position: absolute;
     width: 61px;
-    left: 210px;
-    top: 154px;
+    left: 223px;
+    top: 51px;
     transform: rotate(300deg)
 }
 
@@ -163,6 +169,15 @@ a {
     text-align: center;
 }
 
+.place-txt {
+    text-transform: uppercase;
+}
+
+.timing-txt {
+    margin: 0 auto;
+    text-align: center;
+}
+
 .timing_header {
     text-align: center;
 }
@@ -184,6 +199,7 @@ a {
 .timing_img {
     max-width: 80px;
     max-height: 80px;
+    margin: 0 auto;
 }
 
 .timing_flex3 {
@@ -198,29 +214,88 @@ a {
 }
 
 .timing_bottom-txt {
-    font-size: 10px;
+    font-size: 15px;
     max-width: 130px;
 }
 
 .details {
     text-align: center;
 }
-
-.img_flex {}
-
-.circle1 {}
-
-.circle2 {}
-
-.circle3 {}
-
-.womens {}
-
-.mans {}
-
 .womens-img {
-
+    padding-left: 30px;
+    max-height: 600px;
+    display: grid;
+    grid-template-columns: repeat(3, 200px);
 }
+
+.mans-img {
+    padding-left: 30px;
+    max-height: 600px;
+    display: grid;
+    grid-template-columns: repeat(3, 200px);
+}
+
+.people-img {
+    max-width: 180px;
+    max-height: 200px;
+}
+
+.circle-flex {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.circle2 {
+    background: #808080;
+    /* border: 0.1875em solid #000; */
+    border-radius: 50%;
+    /* box-shadow: 0.375em 0.375em 0 0 rgba(15, 28, 63, 0.125); */
+    height: 4em;
+    width: 4em;
+    margin-right: 15px;
+}
+
+.circle1 {
+    background: #000;
+    /* border: 0.1875em solid #000; */
+    border-radius: 50%;
+    /* box-shadow: 0.375em 0.375em 0 0 rgba(15, 28, 63, 0.125); */
+    height: 4em;
+    width: 4em;
+    margin-right: 15px;
+}
+
+.circle3 {
+    background: #c0c0c0;
+    /* border: 0.1875em solid #000; */
+    border-radius: 50%;
+    /* box-shadow: 0.375em 0.375em 0 0 rgba(15, 28, 63, 0.125); */
+    height: 4em;
+    width: 4em;
+}
+
+.circle4 {
+    background: #000;
+    /* border: 0.1875em solid #000; */
+    border-radius: 50%;
+    /* box-shadow: 0.375em 0.375em 0 0 rgba(15, 28, 63, 0.125); */
+    height: 4em;
+    width: 4em;
+    margin-right: 15px;
+}
+
+.circle5 {
+    background: white;
+    border: 0.05em solid #000;
+    border-radius: 50%;
+    /* box-shadow: 0.375em 0.375em 0 0 rgba(15, 28, 63, 0.125); */
+    height: 4em;
+    width: 4em;
+    margin-right: 15px;
+}
+
+
 .forms {
     text-align: center;
 }
