--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@
     }
 }
 
+@keyframes fade {
+    0%{opacity: 0;}
+    100%{opacity: 1;}
+}
+
 @-webkit-keyframes rot {
     0% {
         transform: rotate(0deg);
