--- a/style.css
+++ b/style.css
@@ -18,8 +18,13 @@
 }
 
 @keyframes fade {
-    0%{opacity: 0;}
-    100%{opacity: 1;}
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 @-webkit-keyframes rot {
@@ -226,6 +231,7 @@ a {
 .details {
     text-align: center;
 }
+
 .womens-img {
     padding-left: 30px;
     max-height: 600px;
@@ -406,5 +412,40 @@ a {
     100% {
         opacity: 0;
         transform: translate(0, 20px) rotate(45deg);
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+        max-width: 360px;
+    }
+
+    .img1_calendar {
+        position: absolute;
+        width: 61px;
+        left: 103px;
+        top: 51px;
+        transform: rotate(300deg);
+    }
+
+    .womens-img {
+        display: flex;
+        /* flex-wrap: nowrap; */
+    }
+    .mans-img {
+        display: flex;
+    }
+    .horizontal-scroll {
+        overflow-x: auto;
+        overflow-y: hidden;
+    }
+    .google-forms {
+        width: 340px;
+    }
+    .timer__item:not(:last-child)::after {
+        content: ':';
+        position: absolute;
+        right: -24px;
+        top: 0px;
     }
 }
